--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ header {
   margin: 2rem 0.95rem;
   background-color: #ffffff;
   padding: 1rem 0;
-
+  overflow: hidden;
   /* box shadow */
   box-shadow: 0px 0px 39px 7px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 0px 39px 7px rgba(0, 0, 0, 0.3);
@@ -161,11 +161,16 @@ header {
 .white-card-img {
   max-width: 100%;
   margin: 0 1rem;
+  transition: 0.2s all;
 }
 
 .white-card-img img {
   max-width: 100%;
   height: auto;
+}
+
+.white-card-img:hover {
+  transform: scale(1.2);
 }
 
 .white-card-text {
